# solara_test_math_trainer

./: README.md  pyproject.toml
pages/: 01-Main.py  02-Addition.py
src/: state.py
src/pages/: 01-Main.py  02-Addition.py
